// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for Insider's productListViewedEvent destination action: all fields 1`] = `
Object {
  "users": Array [
    Object {
      "attributes": Object {
        "age": 65948254365286.4,
        "app_version": "XPOGmR%$*4[TgwzNYN",
        "birthday": "XPOGmR%$*4[TgwzNYN",
        "carrier": "XPOGmR%$*4[TgwzNYN",
        "city": "XPOGmR%$*4[TgwzNYN",
        "country": "XPOGmR%$*4[TgwzNYN",
        "custom": Object {},
        "email": "nice@zuj.cz",
        "gender": "XPOGmR%$*4[TgwzNYN",
        "idfa": "XPOGmR%$*4[TgwzNYN",
        "last_ip": "XPOGmR%$*4[TgwzNYN",
        "locale": "XPOGmR%$*4[TgwzNYN",
        "model": "XPOGmR%$*4[TgwzNYN",
        "name": "XPOGmR%$*4[TgwzNYN",
        "os_version": "XPOGmR%$*4[TgwzNYN",
        "phone": "XPOGmR%$*4[TgwzNYN",
        "platform": "XPOGmR%$*4[TgwzNYN",
        "surname": "XPOGmR%$*4[TgwzNYN",
        "timezone": "XPOGmR%$*4[TgwzNYN",
      },
      "events": Array [
        Object {
          "event_name": "listing_page_view",
          "event_params": Object {
            "custom": Object {},
            "referrer": "XPOGmR%$*4[TgwzNYN",
            "taxonomy": Array [
              "XPOGmR%$*4[TgwzNYN",
            ],
            "url": "XPOGmR%$*4[TgwzNYN",
          },
          "timestamp": "2021-02-01T00:00:00.000Z",
        },
      ],
      "identifiers": Object {
        "custom": Object {
          "segment_anonymous_id": "XPOGmR%$*4[TgwzNYN",
        },
        "uuid": "XPOGmR%$*4[TgwzNYN",
      },
    },
  ],
}
`;

exports[`Testing snapshot for Insider's productListViewedEvent destination action: required fields 1`] = `
Object {
  "users": Array [
    Object {
      "attributes": Object {
        "custom": Object {},
      },
      "events": Array [
        Object {
          "event_name": "listing_page_view",
          "event_params": Object {
            "custom": Object {},
          },
          "timestamp": "2021-02-01T00:00:00.000Z",
        },
      ],
      "identifiers": Object {
        "custom": Object {
          "segment_anonymous_id": "XPOGmR%$*4[TgwzNYN",
        },
        "uuid": "XPOGmR%$*4[TgwzNYN",
      },
    },
  ],
}
`;
